(fix) Up z-index of navbar

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -104,6 +104,7 @@ nav {
 	top: 0;
 
 	margin-bottom: -100px;
+	z-index: 3;
 }
 
 .nav-container:hover {
